--- a/org.dieschnittstelle.ess.ue.add3/pom.xml
+++ b/org.dieschnittstelle.ess.ue.add3/pom.xml
@@ -35,7 +35,9 @@
                             <sourceRoot>${basedir}/target/generated-sources/jaxws</sourceRoot>
                             <wsdlOptions>
                                 <wsdlOption>
-                                    <wsdl>TODO: Specify URL for ADD3</wsdl>
+                                    <wsdl>http://localhost:8080/org.dieschnittstelle.ess.ejb.ejbmodule.erp/StockSystemWebService/StockSystemSingleton?wsdl</wsdl>
+<!--                                    <wsdl>TODO: Specify URL for ADD3</wsdl>-->
+<!--                                    <wsdl>http://localhost:8080/org.dieschnittstelle.ess.ejb.ejbmodule.crm/TouchpointAccessWebService/TouchpointAccessStateless?wsdl</wsdl>-->
                                 </wsdlOption>
                             </wsdlOptions>
                         </configuration>
